rust/test/former/all/vector_without_parameter.stderr
error: Expects at least one parameter here:
         Vec < >
  --> ../../../rust/test/former/all/vector_without_parameter.rs:13:24
   |
13 |   pub string_slice_1 : Vec<>,
   |                        ^^^^^
